k8s/dummy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      volumes:
        - name: dummy-server-storage
          persistentVolumeClaim:
            claimName: dummy-pvc
      containers:
        - name: dummy-server
          image: shaharl-k8s-docker-local.jfrog.io/dummy-server
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: dummy-server-storage
              mountPath: /app/data/
              subPath: files
