k8s/dummy-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy-pod
  labels:
    component: server
spec:
  containers:
  - name: dummy-server
    image: shaharl-k8s-docker-local.jfrog.io/dummy-server
    ports:
      - containerPort: 3000
    # resources:
    #   limits:
    #     memory: "200Mi"
    #   requests:
    #     memory: "100Mi"
    # command: ["stress"]
    # args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
