k8s/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 3000
      targetPort: 3000
